# viiteri

./: .coveragerc  .env  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  REPORT.md  RETRO.md  backlog.md  captain-definition  pyproject.toml  run.sh  run_robot_tests.sh  tasks.py
.github/ISSUE_TEMPLATE/: task.md  user-story.md
.github/workflows/: main.yml  prod.yml
docs/: definition_of_done.md  folder_structure.excalidraw  vaatimusmaarittely.md  viljamin_vaatimusmaarittely.md
libraries/: ReferenceRepositoryLibrary.py  app_library.py
resources/: add.robot  bibtex.robot  common.robot  delete.robot  list.robot  view.robot
tests/integration/: add.robot  bibtex.robot  delete.robot  example.robot  list.robot  references.robot  view.robot
tests/unit/: example_test.py  filter_test.py  reference_entity_test.py  reference_repository_test.py  reference_service_test.py  utils_test.py
viiteri/: .env  app.py  build.py  db.py  index.py  initialize_db.py
viiteri/entities/: article.py  reference.py
viiteri/entities/reference/: __init__.py  article.py  book.py  reference.py
viiteri/repositories/: article_repository.py  reference_repository.py
viiteri/routes/: add.py  bibtex.py  create_reference.py  index.py  list_references.py  remove.py  search.py
viiteri/services/: reference_service.py
viiteri/static/: styles.css
viiteri/templates/: add.html  base.html  bibtex.html  forms_handler.html  index.html  list.html  search.html  submit.html  view.html
viiteri/utils/: build.py  db.py  filter.py  initialize_db.py  reference_factory.py
(+24 files in other folders)
