[tool.poetry]
name = "ohtu-miniprojekti"
version = "0.1.0"
description = "Ryhmän JEEOVI ohtu miniprojekti"
license="MIT"
authors = ["3nd3r1 <ender.spam.guru@gmail.com>"]
readme = "README.md"
packages = [{include = "ohtu_miniprojekti"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
robotframework = "^6.1.1"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
